# rinha-2024-q1

./: Dockerfile  README.md  docker-compose.yml  docker-compose_APENAS_BANCO.yml  pyproject.toml  start.py
config/: init.sql  postgresql.conf
src/configs/variaveis/: gerenciador.py
src/database/: config.py  manager.py
src/database/orm/entidades/: cliente.py  transacao.py
src/database/orm/repositorio/: cliente.py  transacao.py
src/database/settings/: base.py  connection.py  entities.py
src/errors/: error_exception.py
src/model/cliente/: __init__.py
src/model/extrato/: __init__.py
src/model/transacao/: __init__.py  entrada.py  saida.py
src/rotas/: rotas.py
