[tool.poetry]
name = "rinha-backend-2024-q1"
version = "0.1"
description = "Minha tentativa na rinha"
authors = ["Bruno Siqueira Estrela <brunosiqest2@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
cerberus = "^1.3.5"
sqlalchemy = "^2.0.27"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
typer = "^0.9.0"
ruff = "^0.2.1"
black = "^24.2.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pydantic = {version = "^2.6.1", extras = ["dotenv"]}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
